@@ -3,6 +3,7 @@ Codebase in sync with the KDE3 2.00.0-beta1 release
 
     PORTED: Krusader to KDE4
 
+    ADDED: [ 1962519 ] searching by regexp
     ADDED: [ 1172426 ] loading user defined folder icons (can be turned off)
     ADDED: posibility to remove default useractions
     ADDED: thunderbird can be used as the default e-mail sender
